# easyME

./: .gitignore  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
examples/: test.cpp  train.cpp
src/: Makefile  Makefile.am  Makefile.in  dataManager.cpp  dataManager.h  event.h  gisTrainer.cpp  gisTrainer.h  lbfgs.c  lbfgs.h  lbfgsTrainer.cpp  lbfgsTrainer.h  main.cpp  maxEntMap.cpp  maxEntMap.h  maxEntModel.cpp  maxEntModel.h  maxEntTrainer.cpp  maxEntTrainer.h  scgisTrainer.cpp  scgisTrainer.h
