AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = train test
train_SOURCES = ./src/dataManager.h ./src/event.h ./src/gisTrainer.h ./src/maxEntMap.h ./src/maxEntModel.h \
           ./src/maxEntTrainer.h ./src/scgisTrainer.h ./src/dataManager.cpp ./src/gisTrainer.cpp \
           ./examples/train.cpp ./src/maxEntMap.cpp ./src/maxEntModel.cpp ./src/maxEntTrainer.cpp \
           ./src/scgisTrainer.cpp ./src/lbfgsTrainer.cpp ./src/lbfgsTrainer.h ./src/lbfgs.h ./src/lbfgs.c
test_SOURCES = ./src/dataManager.h ./src/event.h ./src/gisTrainer.h ./src/maxEntMap.h ./src/maxEntModel.h \
           ./src/maxEntTrainer.h ./src/scgisTrainer.h ./src/dataManager.cpp ./src/gisTrainer.cpp \
           ./examples/test.cpp ./src/maxEntMap.cpp ./src/maxEntModel.cpp ./src/maxEntTrainer.cpp \
           ./src/scgisTrainer.cpp ./src/lbfgsTrainer.cpp ./src/lbfgsTrainer.h ./src/lbfgs.h ./src/lbfgs.c
